<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorGrey">

<LinearLayout android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/settings_layout"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settingsDaily"
        android:textSize="15dp"
        android:textColor="@color/colorYellow"
        android:layout_marginTop="15dp"/>

    <ListView
        android:id="@+id/settings_daily"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@color/colorSubtleGrey"
        android:dividerHeight="1dp"
        android:layout_marginTop="15dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settingsBing"
        android:textSize="15dp"
        android:textColor="@color/colorYellow"
        android:layout_marginTop="15dp"/>

    <ListView
        android:id="@+id/settings_bing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@color/colorSubtleGrey"
        android:dividerHeight="1dp"
        android:layout_marginTop="15dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settingsPictures"
        android:textSize="15dp"
        android:textColor="@color/colorYellow"
        android:layout_marginTop="15dp"/>

    <ListView android:id="@+id/settings_pictures"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@color/colorSubtleGrey"
        android:dividerHeight="1dp"
        android:layout_marginTop="15dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settingsStorage"
        android:textSize="15dp"
        android:textColor="@color/colorYellow"
        android:layout_marginTop="15dp"/>

    <ListView android:id="@+id/settings_storage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@color/colorSubtleGrey"
        android:dividerHeight="1dp"
        android:layout_marginTop="15dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settingsTheme"
        android:textSize="15dp"
        android:textColor="@color/colorYellow"
        android:layout_marginTop="15dp"/>

    <ListView android:id="@+id/settings_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@color/colorSubtleGrey"
        android:dividerHeight="1dp"
        android:layout_marginTop="15dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settingsTranslation"
        android:textSize="15dp"
        android:textColor="@color/colorYellow"
        android:layout_marginTop="15dp"/>

    <ListView android:id="@+id/settings_translation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@color/colorSubtleGrey"
        android:dividerHeight="1dp"
        android:layout_marginTop="15dp"/>

</LinearLayout>

</ScrollView>