<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/popupElement"
    android:background="@color/colorBlack">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/WallpaperPopup"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PopupSetWallpaper"
            android:layout_marginLeft="20dp"
            android:id="@+id/setWallpaper"
            android:textColor="@color/colorYellow"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PopupDownloadWallpaper"
            android:textAlignment="textEnd"
            android:layout_gravity="end"
            android:id="@+id/downloadWallpaper"
            android:textColor="@color/colorYellow"/>

    </LinearLayout>

</LinearLayout>